<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/txt_inicio"
            android:title="@string/inicio" />

        <item
            android:id="@+id/txt_autorizar"
            android:title="@string/crear" />

        <item
            android:id="@+id/txt_proceso"
            android:title="@string/proceso" />

        <item
            android:id="@+id/txt_rechazadas"
            android:title="@string/rechazadas" />

        <item
            android:id="@+id/txt_colaboradores"
            android:title="@string/colaboradores" />

        <item
            android:id="@+id/txt_agenda"
            android:title="@string/agendas" />

        <!--<item-->
            <!--android:id="@+id/txt_cambiar"-->
            <!--android:title="@string/contra" />-->

        <item
            android:id="@+id/txt_sesion"
            android:title="@string/sesion" />

   </group>

</menu>
