<?xml version="1.0" encoding="utf-8"?>
<layout

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_autoriza"
            />

        <ScrollView
            android:background="@drawable/background"
            android:id="@+id/scroll_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:background="@drawable/background"
                    android:layout_marginTop="2dp"
                    android:padding="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="610dp"
                    android:orientation="horizontal">

                    <android.support.constraint.ConstraintLayout
                        android:orientation="horizontal"
                        android:background="@drawable/estilo_boton_blanco"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/aceptar"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginTop="6dp"
                            android:textColor="@color/letra"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:typeface="robotoBold" />

                        <ImageView
                            android:id="@+id/cancelar"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentLeft="true"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="6dp"
                            android:textColor="@color/letra"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:typeface="robotoBold" />

                        <expansion.neto.com.mx.gerenteapp.utils.font.RobotoTextView
                            android:id="@+id/robotoTextView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:background="@android:color/transparent"
                            android:text="---"
                            android:layout_marginTop="2dp"
                            android:textColor="@color/azultaco"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toStartOf="@+id/aceptar"
                            app:layout_constraintStart_toEndOf="@+id/cancelar"
                            app:layout_constraintTop_toTopOf="parent"
                            app:typeface="robotoRegular" />

                        <LinearLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22dp"
                            android:orientation="vertical"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/robotoTextView2">

                            <expansion.neto.com.mx.gerenteapp.utils.font.RobotoTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/renta"
                                android:textColor="@color/azultaco"
                                android:textSize="14sp"
                                app:typeface="robotoBold"
                                android:layout_marginStart="18dp" />

                            <expansion.neto.com.mx.gerenteapp.utils.font.RobotoTextView
                                android:id="@+id/renta"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="18dp"
                                android:background="@android:color/transparent"
                                tools:text="---"
                                android:textColor="@color/azultaco"
                                android:textSize="12sp"
                                app:typeface="robotoRegular" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearLayout2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="vertical"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                            <expansion.neto.com.mx.gerenteapp.utils.font.RobotoTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/disponibilidad"
                                android:textColor="@color/azultaco"
                                android:textSize="14sp"
                                app:typeface="robotoBold"
                                android:layout_marginStart="18dp" />

                            <expansion.neto.com.mx.gerenteapp.utils.font.RobotoTextView
                                android:id="@+id/disponibilidad"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="36dp"
                                android:background="@android:color/transparent"
                                tools:text="---"
                                android:textColor="@color/azultaco"
                                android:textSize="12sp"
                                app:typeface="robotoRegular" />

                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/linearLayout3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="vertical"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                            <expansion.neto.com.mx.gerenteapp.utils.font.RobotoTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/amortizacion"
                                android:textColor="@color/azultaco"
                                android:textSize="14sp"
                                app:typeface="robotoBold"
                                android:layout_marginStart="18dp" />

                            <expansion.neto.com.mx.gerenteapp.utils.font.RobotoTextView
                                android:id="@+id/amortizacion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="18dp"
                                android:background="@android:color/transparent"
                                tools:text="---"
                                android:textColor="@color/azultaco"
                                android:textSize="12sp"
                                app:typeface="robotoRegular" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearLayout4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="vertical"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                            <expansion.neto.com.mx.gerenteapp.utils.font.RobotoTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tiempode"
                                android:textColor="@color/azultaco"
                                android:textSize="14sp"
                                app:typeface="robotoBold"
                                android:layout_marginStart="18dp" />

                            <expansion.neto.com.mx.gerenteapp.utils.font.RobotoTextView
                                android:id="@+id/tiempoamortizacion"

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="18dp"
                                android:background="@android:color/transparent"
                                tools:text="---"
                                android:textColor="@color/azultaco"
                                android:textSize="12sp"
                                app:typeface="robotoRegular" />

                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/linearLayout5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="vertical"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                            <expansion.neto.com.mx.gerenteapp.utils.font.RobotoTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/periodo"
                                android:textColor="@color/azultaco"
                                android:textSize="14sp"
                                app:typeface="robotoBold"
                                android:layout_marginStart="18dp" />

                            <expansion.neto.com.mx.gerenteapp.utils.font.RobotoTextView
                                android:id="@+id/periodogracia"

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="18dp"
                                android:background="@android:color/transparent"
                                tools:text="---"
                                android:textColor="@color/azultaco"
                                android:textSize="12sp"
                                app:typeface="robotoRegular" />

                        </LinearLayout>







                    </android.support.constraint.ConstraintLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>