<?xml version="1.0" encoding="utf-8"?>
<layout android:id="@+id/fragment1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <android.support.constraint.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <LinearLayout
                android:id="@+id/linearLayout13"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:id="@+id/btn_atras"
                    android:layout_width="0dp"
                    android:layout_marginStart="-20dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:src="@drawable/flechaizqblanca" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginStart="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_titulo_crear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="17dp"
                            android:gravity="center"
                            android:text="@string/documentos"
                            android:textColor="#ffffff"
                            android:textSize="17sp" />

                        <ImageView
                            android:id="@+id/img_avance"
                            android:layout_width="180dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:visibility="invisible" />
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                        android:id="@+id/guardar"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                    <ImageView
                        android:src="@drawable/palomitablanca"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="13dp"
                        android:layout_marginStart="38dp"
                        android:gravity="left" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/linearLayout14"
                    android:layout_width="match_parent"
                    android:layout_height="582dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginStart="12dp"

                    android:layout_marginTop="6dp"
                    android:background="@drawable/estilo_boton_blanco"
                    android:orientation="vertical"
                    android:padding="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout13"
                    app:layout_constraintVertical_bias="1.0">



                <expansion.neto.com.mx.gerenteapp.utils.font.RobotoTextView
                    android:id="@+id/nombreMd"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:layout_marginTop="10dp"
                    app:typeface="robotoRegular"
                    tools:text="@string/administramd"
                    android:textColor="@color/colorPrimary" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                    <TableLayout
                            android:id="@+id/plomosTable"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:divider="@drawable/line"
                            android:dividerPadding="-2dp"
                            android:orientation="horizontal"
                            android:showDividers="middle"
                            android:stretchColumns="*">

                    </TableLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <Button
                        android:enabled="false"
                        android:alpha=".4"
                        android:id="@+id/btn_finalizar"
                        android:layout_width="170dp"
                        android:layout_height="35dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@drawable/estilo_boton_azul_claro"
                        android:text="@string/finalizar"
                        android:textColor="@color/blanco" />
                </LinearLayout>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>
